Update
- Added comments to the entries in AnimationMap so intellisense can show what they are.
- Changed TimelineContainer to use a map for timelines instead of a list. getFlag() was renamed to find(), and some other utilities.
- Renamed QuaternionRotation's fields to x, y, z, and w, respectively, in preparation for a replacement.
- Replaced the odd member arrays in the emitters with separate  named members.
- Small fixes, but mostly more cleanup.